<resources>
    <string name="app_name">Calcul Mental</string>
    <string name="titre">Alien Calculation: Isolation</string>
    <string name="bouton_jouer">Jouer !</string>
    <string name="bouton_score">Records</string>
    <string name="bouton_credits">Crédits</string>
    <string name="logo_desc">Image du logo(un alien dans son vaisseau</string>
    <string name="toast_bonne">Bonne Réponse !</string>
    <string name="toast_mauvais">Mauvaise Réponse !</string>

    <string name="accueil">Accueil</string>
    <string name="text_score">Enregistrer votre score</string>
    <string name="username_input">Entrer un nom d\'utilisateur</string>
    <string name="username_error">Entrez un nom d\'utilisateur valide</string>
    <string name="btn_save_score">Sauvegarder votre score</string>

    <string name="title_credits">Cette application a été développée par</string>
    <string name="text_credits">Hallot Florent - Walter Malcolm - Gonthier Lucas</string>
    <string name="text_group">Groupe 1</string>

    <string name="title_rules">Vous avez été kidnappé par des Aliens !</string>
    <string name="text_rules">Pour espérer survivre, vous devez passer leurs tests. Répondez à ces calculs mathématiques mais attention, vous n\'avez le droit qu\'à 2 erreurs, la 3eme vous serait fatale.</string>
    <string name="text_gl">Bonne chance !</string>
    <string name="btn_understood">Compris !</string>

</resources>