<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3AAAFE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_credits"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txt_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_credits"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/txt_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_group"
            android:textSize="14sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#81EF36"
            android:text="@string/accueil"
            android:textColor="@android:color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>