<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3AAAFE"
    tools:context=".ActivityRules">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/title_rules"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txt_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/text_rules"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txt_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/text_gl"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_understood"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:backgroundTint="#81EF36"
            android:text="@string/btn_understood"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:cornerRadius="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>