<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3AAAFE"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <TextView
            android:id="@+id/text_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_score"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:hint="@string/username_input"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_save_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#81EF36"
            android:text="@string/btn_save_score"
            android:textColor="@android:color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
